add_executable(attribute_creation attribute_creation.cpp)
target_link_libraries(attribute_creation h5cpp)

add_executable(attribute_iteration attribute_iteration.cpp)
target_link_libraries(attribute_iteration h5cpp)

add_executable(attribute_io attribute_io.cpp)
target_link_libraries(attribute_io h5cpp)