if(WIN32)
  add_executable(attribute_creation WIN32 attribute_creation.cpp)
else()
  add_executable(attribute_creation attribute_creation.cpp)
endif()
target_link_libraries(attribute_creation PRIVATE h5cpp::h5cpp)

if(WIN32)
  add_executable(attribute_iteration WIN32 attribute_iteration.cpp)
else()
  add_executable(attribute_iteration attribute_iteration.cpp)
endif()
target_link_libraries(attribute_iteration PRIVATE h5cpp::h5cpp)

if(WIN32)
  add_executable(attribute_io WIN32 attribute_io.cpp)
else()
  add_executable(attribute_io attribute_io.cpp)
endif()
target_link_libraries(attribute_io PRIVATE h5cpp::h5cpp)
