
test_sources+=files('attribute_test_fixtures.cpp',
                    'attribute_test.cpp',
                    'attribute_name_access_test.cpp',
                    'attribute_management_test.cpp',
                    'attribute_scalar_io_test.cpp',
                    'attribute_multidim_io_test.cpp',
                    'attribute_complex_io_test.cpp',
                    'attribute_fixed_string_io.cpp',
                    'attribute_variable_string_io.cpp',
                    'attribute_h5py_bool_test.cpp', 'attribute_pniio_bool_test.cpp')
test_headers+=files('attribute_test_fixtures.hpp')